--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "near-restaurants",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "@vitejs/plugin-react": "^2.2.0",
-    "vite": "^3.2.0"
-  }
+        "name": "near-restaurants",
+        "private": true,
+        "version": "0.0.0",
+        "scripts": {
+                "dev": "vite",
+                "build": "vite build",
+                "preview": "vite preview",
+                "test-e2e": "cucumber-js --require cucumber.config.js --require tests/search.feature/**/**.js --require tests/stepDefinitions/**/**.js --format @cucumber/pretty-formatter"
+        },
+        "dependencies": {
+                "react": "^18.2.0",
+                "react-dom": "^18.2.0"
+        },
+        "devDependencies": {
+                "@cucumber/cucumber": "^8.7.0",
+                "@cucumber/pretty-formatter": "^1.0.0",
+                "@playwright/test": "^1.27.1",
+                "@types/react": "^18.0.22",
+                "@types/react-dom": "^18.0.7",
+                "@vitejs/plugin-react": "^2.2.0",
+                "playwright": "^1.27.1",
+                "vite": "^3.2.0"
+        }
 }
