--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
                 "test-e2e": "cucumber-js --require cucumber.config.js --require tests/search.feature/**/**.js --require tests/stepDefinitions/**/**.js --format @cucumber/pretty-formatter"
         },
         "dependencies": {
+                "leaflet": "^1.9.2",
                 "react": "^18.2.0",
-                "react-dom": "^18.2.0"
+                "react-dom": "^18.2.0",
+                "react-leaflet": "^4.1.0"
         },
         "devDependencies": {
                 "@cucumber/cucumber": "^8.7.0",
