--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
                 "@types/react-dom": "^18.0.7",
                 "@vitejs/plugin-react": "^2.2.0",
                 "playwright": "^1.27.1",
-                "vite": "^3.2.0"
+                "vite": "^3.2.0",
+                "vite-plugin-pwa": "^0.12.2",
+                "workbox-window": "^6.5.4"
         }
 }
